add pooled variants

--- a/report/graded-similarity.tex
+++ b/report/graded-similarity.tex
@@ -53,8 +53,9 @@
 % Quotations
 \usepackage{csquotes}
 
-% Hyperlinks
+% References
 \usepackage{hyperref}
+\usepackage{cleveref}
 
 % Input/include relative paths
 \usepackage{import}
