--- a/report/section-conclusion.tex
+++ b/report/section-conclusion.tex
@@ -19,15 +19,15 @@ parameter such as the window size prior to submission.
 Additionally, the models that I used were not necessarily available to the authors.
 With these caveats, I achieved several notable results:
 \begin{itemize}
-  \item The contextual embeddings of \texttt{EMBEDDIA/crosloengual-bert} with a window
-        size of three would have placed second among the Croatian submissions
-        ($0.708$).
-  \item The contextual embeddings of \texttt{TurkuNLP/bert-base-finnish-uncased-v1} with
-        a window size of zero would have placed fourth among the Finnish submissions
-        ($0.679$).
-  \item The \emph{static} embeddings of \texttt{TurkuNLP/bert-base-finnish-uncased-v1}
+  \item The \texttt{pooled} variant of \texttt{EMBEDDIA/crosloengual-bert} with a window
+        size of three would have placed second among the Croatian submissions, with a
+        score of $0.717$.
+  \item The \texttt{contextual} variant of \texttt{TurkuNLP/bert-base-finnish-uncased-v1}
+        with a window size of zero would have placed fourth among the Finnish
+        submissions, with a score of $0.679$.
+  \item The \texttt{static} variant of \texttt{TurkuNLP/bert-base-finnish-uncased-v1}
         with a window size of zero outperform several of the Finnish submissions,
-        including the baseline ($0.564$).
+        including the baseline, with a score of $0.564$.
 \end{itemize}
 Given the significant expense of applying contextual-embedding models, these results
 highlight the importance of analysing the complexity of the task at hand and considering
