--- a/report/section-task-definition.tex
+++ b/report/section-task-definition.tex
@@ -1,7 +1,7 @@
 \section{Task definition}
 \label{task-definition}
 
-The first subtask of SemEval-2020 Task 3 is to predict the direction and magnitude of
+The first sub-task of SemEval-2020 Task 3 is to predict the direction and magnitude of
 the change in the human judgment of similarity of the same pair of target words in two
 different contexts.
 The task is unsupervised: the submissions were evaluated on the CoSimLex dataset
@@ -11,7 +11,7 @@ CoSimLex is an extension of SimLex-999 \parencite{Hill2015} that consists of pai
 target words and their contexts in four languages: English ($n = 340$), Finnish
 ($n = 24$), Croatian ($n = 112$), and Slovene ($n = 111$).
 
-The score for the first subtask was computed by the uncentered (zero-mean) Pearson
+The score for the first sub-task was computed by the uncentered (zero-mean) Pearson
 correlation coefficient between the predicted changes in similarity and the human
 judgments represented in the CoSimLex dataset \parencite[42]{Armendariz2020}.
 This metric is equivalent to the cosine similarity between the two vectors of results:
