--- a/report/figure-table-best-window-size.tex
+++ b/report/figure-table-best-window-size.tex
@@ -68,7 +68,6 @@
 }
 
 \begin{figure}
-  \label{table:best-window-size-static}
   \centering
   \captionsetup{justification=centering}
   \begin{subfigure}[b]{\textwidth}
@@ -123,12 +122,14 @@
     ]{../results/model=static_language=sl_window=0-50_operation=sum_similarity=cosine_top_1.csv}
     \caption{Slovene}
   \end{subfigure}
-  \caption{The window size that maximises the score for static-embedding models with
-    the additive composition operation. The best score for each language is underlined.}
+  \caption{The window size that maximises the score for the \texttt{static} model
+    variants with the additive composition operation.
+    The best score for each language is underlined.
+  }
+  \label{table:best-window-size-static}
 \end{figure}
 
 \begin{figure}
-  \label{table:best-window-size-contextual}
   \centering
   \captionsetup{justification=centering}
   \begin{subfigure}[b]{\textwidth}
@@ -183,6 +184,71 @@
     ]{../results/model=contextual_language=sl_window=0-10_operation=sum_similarity=cosine_top_1.csv}
     \caption{Slovene}
   \end{subfigure}
-  \caption{The window size that maximises the score for contextual-embedding models with
-    the additive composition operation. The best score for each language is underlined.}
+  \caption{The window size that maximises the score for the \texttt{contextual} model
+    variants with the additive composition operation.
+    The best score for each language is underlined.
+  }
+  \label{table:best-window-size-contextual}
+\end{figure}
+
+\begin{figure}
+  \centering
+  \captionsetup{justification=centering}
+  \begin{subfigure}[b]{\textwidth}
+    \centering
+    \pgfplotstabletypeset[
+      every row 4 column 2/.append style={
+          postproc cell content/.append code={
+              \pgfkeysgetvalue{/pgfplots/table/@cell content}{\besttemp}
+              \pgfkeysalso{best/.expand once={\besttemp}}
+            },
+        },
+    ]{../results/model=pooled_language=en_window=0-10_operation=sum_similarity=cosine_top_1.csv}
+    \caption{English}
+  \end{subfigure}
+  \par\bigskip\par\bigskip
+  \begin{subfigure}[b]{\textwidth}
+    \centering
+    \pgfplotstabletypeset[
+      every row 3 column 2/.append style={
+          postproc cell content/.append code={
+              \pgfkeysgetvalue{/pgfplots/table/@cell content}{\besttemp}
+              \pgfkeysalso{best/.expand once={\besttemp}}
+            },
+        },
+    ]{../results/model=pooled_language=fi_window=0-10_operation=sum_similarity=cosine_top_1.csv}
+    \caption{Finnish}
+  \end{subfigure}
+  \par\bigskip\par\bigskip
+  \begin{subfigure}[b]{\textwidth}
+    \centering
+    \pgfplotstabletypeset[
+      every row 0 column 2/.append style={
+          postproc cell content/.append code={
+              \pgfkeysgetvalue{/pgfplots/table/@cell content}{\besttemp}
+              \pgfkeysalso{best/.expand once={\besttemp}}
+            },
+        },
+    ]{../results/model=pooled_language=hr_window=0-10_operation=sum_similarity=cosine_top_1.csv}
+    \caption{Croatian}
+  \end{subfigure}
+  \par\bigskip\par\bigskip
+  \begin{subfigure}[b]{\textwidth}
+    \centering
+    \pgfplotstabletypeset[
+      skip rows between index={3}{4},
+      every row 0 column 2/.append style={
+          postproc cell content/.append code={
+              \pgfkeysgetvalue{/pgfplots/table/@cell content}{\besttemp}
+              \pgfkeysalso{best/.expand once={\besttemp}}
+            },
+        },
+    ]{../results/model=pooled_language=sl_window=0-10_operation=sum_similarity=cosine_top_1.csv}
+    \caption{Slovene}
+  \end{subfigure}
+  \caption{The window size that maximises the score for the \texttt{pooled} model
+    variants with the additive composition operation.
+    The best score for each language is underlined.
+  }
+  \label{table:best-window-size-pooled}
 \end{figure}
