--- a/report/section-introduction.tex
+++ b/report/section-introduction.tex
@@ -34,8 +34,8 @@ contextualisation to static representations.
 SemEval-2020 Task 3, ``Graded Word Similarity in Context''
 \parencite{Armendariz2020a}, presents an opportunity to make such a comparison.
 Briefly, the task is to predict the human judgment of similarity of the same pair of
-words in two different contexts (Section~\ref{task-definition}).
-I elected to focus on the first subtask, which is to predict the \emph{change} in
+words in two different contexts (\cref{task-definition}).
+I elected to focus on the first sub-task, which is to predict the \emph{change} in
 similarity, rather than the absolute similarity in each context.
 Specifically, I evaluated the results obtained by computing the cosine similarity
 between static and contextual embeddings and the composition of these embeddings within
